Atualização de projetos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main id="inicio" class="topo">
     <img src="luisf.jpg" alt="Foto de Luis Felipe" class="foto-perfil">
     <h1>Luis Felipe Barbosa</h1>
-    <p class="cabecalho-sub-titulo">Desenvolvedor Front-End | JavaScript | NodeJs | MySQL</p>
+    <p class="cabecalho-sub-titulo">Desenvolvedor Front-End | JavaScript | NodeJs | React.Js</p>
   </main>
 
   <div class="redes-sociais">
@@ -47,7 +47,7 @@
       <p class="sobre-paragrafo">
         Olá, sou militar da ativa na Academia militar das Agulhas Negras, e estou em transição de carreira para a área
         de programação. Enquanto estudante de Análise e Desenvolvimento de Sistema, sempre me atrai por apresentações de
-        projetos e Enquanto programador, expresso meu interesse pela representação gráfica através do Front-End.
+        projetos e Enquanto programador, expresso meu interesse pela representação gráfica através do Front-End e busco conhecimento e aprefeiçoamento dentro do back-end. Com React Js e JavaScript.
       </p>
     </div>
   </section>
@@ -68,13 +68,10 @@
       </div>
 
       <div class="projetos-card">
-        <img src="Alfatech2.jpeg" alt="Projeto 2" class="projetos-imagem">
+        <img src="Layout-inicial1.png" alt="Projeto 2" class="projetos-imagem">
         <div class="caixa-texto-projeto">
-          <h3 class="info-projetos">Alfatech</h3>
-          <p class="paragrafo-projetos">Projeto website para um provedor de hospedagem. O foco está em um visual limpo e
-            funcional, com
-            uma interface amigável para o usuário. Ainda está em fase inicial, mas a ideia é evoluir o projeto com novas
-            funcionalidades no futuro.</p>
+          <h3 class="info-projetos">Gelateria</h3>
+          <p class="paragrafo-projetos">Projeto criado em React sobre uma sorveteria, utilizando o recurso App Router para criar uma aplicação React com múltiplas páginas e Implementar a navegação entre páginas em uma aplicação React.</p>
         </div>
 
       </div>
@@ -109,9 +106,7 @@
 
   </section>
 
-  <div class="texto-rodape">
-    <p>&copy; Portfólio - Desenvolvido por Luis Felipe Barbosa - Todos os direitos reservados</p>
-  </div>
+
 
   <script>
     function enviarWhats(event) {
@@ -128,10 +123,12 @@
 
       console.log(url)
 
-        window.open(url, '_blank')
+      window.open(url, '_blank')
     }
 
-
+    <div class="texto-rodape">
+      <p>&copy; Portfólio - Desenvolvido por Luis Felipe Barbosa - Todos os direitos reservados</p>
+    </div>
 
 
   </script>
