Atualização do portfólio

--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
     <h2 class="sobre-titulo">Sobre Mim</h2>
     <div class="sobre-caixa">
       <p class="sobre-paragrafo">
-        Olá, sou militar da ativa na Academia militar das Agulhas Negras, e estou em transição de carreira para a área
-        de programação. Enquanto estudante de Análise e Desenvolvimento de Sistema, sempre me atrai por apresentações de
-        projetos e Enquanto programador, expresso meu interesse pela representação gráfica através do Front-End e busco conhecimento e aprefeiçoamento dentro do back-end. Com React Js e JavaScript.
+        Iniciando na carreira para a área de Desenvolvimento de Software, com foco em Front-End e um conhecimento intermediário em JavaScript, React.JS, HTML, CSS e lógica de programação. Atualmente me capacitando em Análise e Desenvolvimento de Sistemas, com experiência em sistemas e banco de dados no ambiente militar. 
       </p>
     </div>
   </section>
