--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
   <div class="redes-sociais">
     <a href="https://www.linkedin.com/in/luis-felipe-barbosa-199456227/" target="_blank">
-      <img src="linkedin.png" alt="linkedin">
+      <img src="linkedin22.png" alt="linkedin">
     </a>
     <a href="https://github.com/Luisbarbosa06" target="_blank">
-      <img src="github.png" alt="github">
+      <img src="github22.png" alt="github">
 
     </a>
     <a href="https://wa.me/+5524999230188" target="_blank">
-      <img src="whatsapp.png" alt="whatsapp">
+      <img src="whatsapp22.png" alt="whatsapp">
     </a>
 
   </div>
@@ -51,7 +51,7 @@
   </section>
 
   <section id="projetos" class="projetos">
-    <h2 class="projetos-titulo">Meus Projetos</h2>
+    <h2 class="projetos-titulo">Meus Últimos Projetos</h2>
     <div class="projetos-caixa">
 
       <div class="projetos-card">
@@ -124,13 +124,13 @@
       window.open(url, '_blank')
     }
 
-    <div class="texto-rodape">
-      <p>&copy; Portfólio - Desenvolvido por Luis Felipe Barbosa - Todos os direitos reservados</p>
-    </div>
+    
 
 
   </script>
-
+<div class="texto-rodape">
+      <p>&copy; Portfólio - Desenvolvido por Luis Felipe Barbosa - Todos os direitos reservados</p>
+    </div>
 </body>
 
 </html>
