--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
       <p class="sobre-paragrafo">
         Iniciando na carreira para a área de Desenvolvimento de Software, com foco em Front-End e um conhecimento intermediário em JavaScript, React.JS, HTML, CSS e lógica de programação. Atualmente me capacitando em Análise e Desenvolvimento de Sistemas, com experiência em sistemas e banco de dados no ambiente militar. 
       </p>
+
+      <a href="assets/curriculo-luis-felipe.pdf" download class="botao-curriculo">
+      Baixar Currículo
+    </a>
+
     </div>
   </section>
 
@@ -55,7 +60,9 @@
     <div class="projetos-caixa">
 
       <div class="projetos-card">
-        <img src="Pestshop2.jpeg" alt="Projeto 1" class="projetos-imagem">
+        <a href="https://github.com/Luisbarbosa06/Petshop/tree/main/petshop" target="_blank">
+       <img src="Pestshop2.jpeg" alt="Projeto 1" class="projetos-imagem">
+       </a>
         <div class="caixa-texto-projeto">
           <h3 class="info-projetos">Petshop Shalom</h3>
           <p class="paragrafo-projetos">Esse é um projeto de site para um petshop, criado com HTML e CSS, pensado para
@@ -66,7 +73,9 @@
       </div>
 
       <div class="projetos-card">
+        <a href="https://github.com/Luisbarbosa06/Projeto---Sorveteria" target="_blank">
         <img src="Layout-inicial1.png" alt="Projeto 2" class="projetos-imagem">
+        </a>
         <div class="caixa-texto-projeto">
           <h3 class="info-projetos">Gelateria</h3>
           <p class="paragrafo-projetos">Projeto criado em React sobre uma sorveteria, utilizando o recurso App Router para criar uma aplicação React com múltiplas páginas e Implementar a navegação entre páginas em uma aplicação React.</p>
@@ -75,7 +84,9 @@
       </div>
 
       <div class="projetos-card">
+        <a href="https://github.com/Luisbarbosa06/Cafeteria-Manhattan" target="_blank">
         <img src="Cafeteria2.jpeg" alt="Projeto 3" class="projetos-imagem">
+        </a>
         <div class="caixa-texto-projeto">
           <h3 class="info-projetos">Cafeteria</h3>
           <p class="paragrafo-projetos">Uma cafeteria com alma nova-iorquina e um site à altura. Este projeto traz o
