Atualiza portfolio com melhorias visuais e conteúdo

--- a/index.html
+++ b/index.html
@@ -13,56 +13,84 @@
   <div class="particulas"></div>
 
   <div class="nav-links">
+
+    <div class="portfolio">
+      <p>Portfólio</p>
+    </div>
+
     <a href="#inicio">Início</a>
     <a href="#sobre">Sobre</a>
     <a href="#projetos">Projetos</a>
     <a href="#contatos">Contatos</a>
+
   </div>
 
   <main id="inicio" class="topo">
-    <img src="luisf.jpg" alt="Foto de Luis Felipe" class="foto-perfil">
-    <h1>Luis Felipe Barbosa</h1>
-    <p class="cabecalho-sub-titulo">Desenvolvedor Front-End | JavaScript | NodeJs | React.Js</p>
+    <img src="fotoperfil3.jpeg" alt="Foto de Luis Felipe" class="foto-perfil">
+    <h1>Olá, eu sou</h1>
+    <h2 class="nome">Luis Felipe Custódio Barbosa</h2>
+    <h3>Sempre em constante evolução dentro da tecnologia, desenvolvendo aplicações focadas no Front-End</h3>
+
+
+
+    <div class="icons">
+      <img src="dev.png" alt="dev">
+      <img src="css.png" alt="css">
+      <img src="html.png" alt="html">
+      <img src="javascript.png" alt="javascript">
+      <img src="react.png" alt="react">
+      <img src="git.png" alt="git">
+    </div>
+
   </main>
 
-  <div class="redes-sociais">
-    <a href="https://www.linkedin.com/in/luis-felipe-barbosa-199456227/" target="_blank">
-      <img src="linkedin22.png" alt="linkedin">
-    </a>
-    <a href="https://github.com/Luisbarbosa06" target="_blank">
-      <img src="github22.png" alt="github">
-
-    </a>
-    <a href="https://wa.me/+5524999230188" target="_blank">
-      <img src="whatsapp22.png" alt="whatsapp">
-    </a>
-
-  </div>
-
-
-
   <section id="sobre" class="sobre">
-    <h2 class="sobre-titulo">Sobre Mim</h2>
+    <h2 class="sobre-titulo">SOBRE <span>MIM</span></h2>
     <div class="sobre-caixa">
-      <p class="sobre-paragrafo">
-        Iniciando na carreira para a área de Desenvolvimento de Software, com foco em Front-End e um conhecimento intermediário em JavaScript, React.JS, HTML, CSS e lógica de programação. Atualmente me capacitando em Análise e Desenvolvimento de Sistemas, com experiência em sistemas e banco de dados no ambiente militar. 
+      <h2 class="sobre-paragrafo1">
+        Graduando em Análise e Desenvolvimento de Sistemas, pela Universidade Estácio de Sá - Rio de Janeiro
+      </h2>
+
+      <p class="sobre-paragrafo2">
+        Sou desenvolvedor Front-end Júnior com foco em React. Atuo no desenvolvimento de interfaces modernas,
+        responsivas e reutilizáveis, aplicando JavaScript, React.js, HTML e CSS. Possuo conhecimentos em consumo de
+        APIs, componentização, controle de estado e integração com banco de dados MySQL. Tenho experiência em ambientes
+        corporativos estruturados e busco constantemente evoluir em boas práticas de front-end, performance e
+        usabilidade.
       </p>
 
-      <a href="assets/curriculo-luis-felipe.pdf" download class="botao-curriculo">
-      Baixar Currículo
-    </a>
 
+      <a href="assets/Curriculun - Luis Felipe.pdf" download class="botao-curriculo">
+        BAIXAR CV
+      </a>
+
+      <div class="redes-sociais">
+        <a href="https://www.linkedin.com/in/luis-felipe-barbosa-199456227/" target="_blank">
+          <img src="linkedin22.png" alt="linkedin">
+        </a>
+        <a href="https://github.com/Luisbarbosa06" target="_blank">
+          <img src="github22.png" alt="github">
+
+        </a>
+        <a href="https://wa.me/+5524999230188" target="_blank">
+          <img src="whatsapp22.png" alt="whatsapp">
+        </a>
+
+      </div>
     </div>
+
+
+
   </section>
 
   <section id="projetos" class="projetos">
-    <h2 class="projetos-titulo">Meus Últimos Projetos</h2>
+    <h2 class="projetos-titulo">ÚLTIMOS <span>PROJETOS</span></h2>
     <div class="projetos-caixa">
 
       <div class="projetos-card">
         <a href="https://github.com/Luisbarbosa06/Petshop/tree/main/petshop" target="_blank">
-       <img src="Pestshop2.jpeg" alt="Projeto 1" class="projetos-imagem">
-       </a>
+          <img src="Pestshop2.jpeg" alt="Projeto 1" class="projetos-imagem">
+        </a>
         <div class="caixa-texto-projeto">
           <h3 class="info-projetos">Petshop Shalom</h3>
           <p class="paragrafo-projetos">Esse é um projeto de site para um petshop, criado com HTML e CSS, pensado para
@@ -74,18 +102,20 @@
 
       <div class="projetos-card">
         <a href="https://github.com/Luisbarbosa06/Projeto---Sorveteria" target="_blank">
-        <img src="Layout-inicial1.png" alt="Projeto 2" class="projetos-imagem">
+          <img src="Layout-inicial1.png" alt="Projeto 2" class="projetos-imagem">
         </a>
         <div class="caixa-texto-projeto">
           <h3 class="info-projetos">Gelateria</h3>
-          <p class="paragrafo-projetos">Projeto criado em React sobre uma sorveteria, utilizando o recurso App Router para criar uma aplicação React com múltiplas páginas e Implementar a navegação entre páginas em uma aplicação React.</p>
+          <p class="paragrafo-projetos">Projeto criado em React sobre uma sorveteria, utilizando o recurso App Router
+            para criar uma aplicação React com múltiplas páginas e Implementar a navegação entre páginas em uma
+            aplicação React.</p>
         </div>
 
       </div>
 
       <div class="projetos-card">
         <a href="https://github.com/Luisbarbosa06/Cafeteria-Manhattan" target="_blank">
-        <img src="Cafeteria2.jpeg" alt="Projeto 3" class="projetos-imagem">
+          <img src="Cafeteria2.jpeg" alt="Projeto 3" class="projetos-imagem">
         </a>
         <div class="caixa-texto-projeto">
           <h3 class="info-projetos">Cafeteria</h3>
@@ -135,13 +165,13 @@
       window.open(url, '_blank')
     }
 
-    
+
 
 
   </script>
-<div class="texto-rodape">
-      <p>&copy; Portfólio - Desenvolvido por Luis Felipe Barbosa - Todos os direitos reservados</p>
-    </div>
+  <div class="texto-rodape">
+    <p>&copy; Portfólio - Desenvolvido por Luis Felipe Barbosa - Todos os direitos reservados</p>
+  </div>
 </body>
 
 </html>
