--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </p>
 
 
-      <a href="assets/Curriculun - Luis Felipe.pdf" download class="botao-curriculo">
+      <a href="assets/LUISFELIPE.pdf" download class="botao-curriculo">
         BAIXAR CV
       </a>
 
