--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
       </h2>
 
       <p class="sobre-paragrafo2">
-        Sou desenvolvedor Front-end Júnior com foco em React. Atuo no desenvolvimento de interfaces modernas,
-        responsivas e reutilizáveis, aplicando JavaScript, React.js, HTML e CSS. Possuo conhecimentos em consumo de
-        APIs, componentização, controle de estado e integração com banco de dados MySQL. Tenho experiência em ambientes
-        corporativos estruturados e busco constantemente evoluir em boas práticas de front-end, performance e
-        usabilidade.
+          Com foco em atuação como Desenvolvedor Front-end, direcionado à criação de interfaces modernas, funcionais e responsivas. Possuo conhecimentos sólidos em React.js, JavaScript (ES6+), HTML5 e CSS3, aplicados no desenvolvimento de aplicações Front-end orientadas à experiência do usuário. Tenho interesse em oportunidades presenciais e remotas, buscando crescimento profissional na área de tecnologia.
+          Atualmente, possuo experiência profissional em ambiente corporativo estruturado, atuando como Auxiliar Administrativo no Exército Brasileiro, onde utilizo diariamente sistemas informatizados, análise de dados e organização de informações. Essa vivência contribuiu para o desenvolvimento de habilidades como atenção aos detalhes, organização, pensamento analítico e trabalho em equipe, competências que aplico diretamente no desenvolvimento de software e na escrita de código limpo e estruturado.
+          Complemento minha formação acadêmica com cursos focados em React.js, JavaScript, HTML, CSS, Node.js, SQL e Git/GitHub, além de manter projetos práticos disponíveis no GitHub e portfólio online. Busco minha primeira oportunidade como Desenvolvedor Front-end para aplicar boas práticas de desenvolvimento, aprender com times experientes e contribuir com soluções eficientes, escaláveis e alinhadas às necessidades do negócio.
       </p>
 
 
