Atualização de layout

--- a/index.html
+++ b/index.html
@@ -86,23 +86,23 @@
       </div>
       <div class="sobre-conteudo scroll-reveal">
         <div class="sobre-texto">
-          <p>Graduando em <strong>Análise e Desenvolvimento de Sistemas</strong> pela Universidade Estácio de Sá, com foco em atuação como Desenvolvedor Front-end.</p>
-          <p>Possuo conhecimentos sólidos em <strong>React.js, JavaScript (ES6+), HTML5 e CSS3</strong>, aplicados no desenvolvimento de interfaces modernas e responsivas orientadas à experiência do usuário.</p>
-          <p>Possuo experiência profissional em ambiente corporativo estruturado, atuando como Auxiliar Administrativo no <strong>Exército Brasileiro</strong>, onde utilizei diariamente sistemas informatizados, análise de dados e organização de informações.</p>
-          <p>Busco minha primeira oportunidade como Desenvolvedor Front-end para aplicar boas práticas, aprender com times experientes e contribuir com soluções eficientes.</p>
+          <p>Graduando em <strong>Análise e Desenvolvimento de Sistemas</strong> pela Universidade Estácio de Sá. Atualmente atuo como <strong>Programador na Brasmid</strong>, desenvolvendo e mantendo sistemas web com <strong>PHP, JavaScript e MySQL</strong>.</p>
+          <p>Possuo experiência prática em <strong>criação e otimização de consultas SQL</strong>, estruturação de banco de dados, versionamento com <strong>Git</strong>, deploy em ambiente <strong>Linux</strong> e integração entre front-end e back-end.</p>
+          <p>Complemento minha atuação com conhecimentos sólidos em <strong>React.js, TypeScript, HTML5, CSS3</strong> e ferramentas como <strong>Vite, Supabase e Vercel</strong>, aplicados em projetos pessoais e na construção de interfaces modernas e responsivas.</p>
+          <p>Anteriormente, atuei no <strong>Exército Brasileiro</strong> como Auxiliar Administrativo, onde desenvolvi habilidades analíticas, organização e trabalho em equipe em ambiente corporativo estruturado.</p>
         </div>
         <div class="sobre-info">
+          <div class="info-item">
+            <span class="info-label">Cargo Atual</span>
+            <span class="info-valor">Programador - Brasmid</span>
+          </div>
           <div class="info-item">
             <span class="info-label">Formação</span>
             <span class="info-valor">Análise e Des. de Sistemas</span>
           </div>
           <div class="info-item">
-            <span class="info-label">Instituição</span>
-            <span class="info-valor">Estácio de Sá - RJ</span>
-          </div>
-          <div class="info-item">
-            <span class="info-label">Experiência</span>
-            <span class="info-valor">Aux. Administrativo - EB</span>
+            <span class="info-label">Localização</span>
+            <span class="info-valor">Volta Redonda - RJ</span>
           </div>
           <div class="info-item">
             <span class="info-label">Idioma</span>
@@ -198,6 +198,8 @@
             <li>VS Code</li>
             <li>Vite</li>
             <li>Deploy com Vercel</li>
+            <li>Linux</li>
+            <li>WSL</li>
           </ul>
         </div>
 
@@ -241,6 +243,7 @@
             <li>Excel Avançado</li>
             <li>Análise de Dados</li>
             <li>IA para Desenvolvimento</li>
+            <li>Linux</li>
           </ul>
         </div>
       </div>
@@ -281,7 +284,7 @@
             </div>
 
             <div class="projetos-card">
-              <a href="https://github.com/Luisbarbosa06/Dashboard-de-Finan-as.git" target="_blank" class="projeto-link">
+              <a href="https://minhacarteira-finan.vercel.app/login" target="_blank" class="projeto-link">
                 <div class="projeto-imagem-container">
                   <img src="projeto4.jpeg" alt="Projeto Dashboard" class="projetos-imagem">
                   <div class="projeto-overlay">
